src/terminal/src/snapshots/knot_terminal__renderer__tests__completed_indent_0_plain.snap
---
source: src/terminal/src/renderer.rs
expression: ctx.sanitized_output()
---
[CI] [START] Root Task
[CI] [SUCCESS] Root Task (Done) [TIME]
