src/terminal/src/snapshots/knot_terminal__renderer__tests__failed_indent_4_interactive.snap
---
source: src/terminal/src/renderer.rs
expression: ctx.sanitized_output()
---
    ✖  Deep Stage (fail) [TIME]
    │
    │ issue:    Error
