src/terminal/src/snapshots/knot_terminal__renderer__tests__lifecycle_1_title_plain.snap
---
source: src/terminal/src/renderer.rs
expression: ctx.sanitized_output()
---
[CI]     [TASK] Build Core
