src/terminal/src/snapshots/knot_terminal__renderer__tests__lifecycle_2_waiting_interactive.snap
---
source: src/terminal/src/renderer.rs
expression: ctx.sanitized_output()
---
    ·  Build Core (pending)
