src/terminal/src/snapshots/knot_terminal__renderer__tests__lifecycle_4_skipped_plain.snap
---
source: src/terminal/src/renderer.rs
expression: ctx.sanitized_output()
---
[CI]     [TASK] Build Core
[CI]     [WAIT] Build Core (pending)
[CI]   > [START] Build Core (compiling src/main.rs)
[CI]     [SKIP] Build Core (cached)
