src/terminal/src/snapshots/knot_terminal__renderer__tests__msg_some_interactive.snap
---
source: src/terminal/src/renderer.rs
expression: ctx.sanitized_output()
---
·  Task A (waiting for lock)
