src/terminal/src/snapshots/knot_terminal__renderer__tests__running_indent_4_arrow_plain.snap
---
source: src/terminal/src/renderer.rs
expression: ctx.sanitized_output()
---
[CI]   > [START] Deep Stage
