src/terminal/src/snapshots/knot_terminal__renderer__tests__separator_empty_plain.snap
---
source: src/terminal/src/renderer.rs
expression: ctx.sanitized_output()
---
[CI] ────────────────────────────────────────────────────────────────────────────────────────────────────
