src/terminal/src/snapshots/knot_terminal__renderer__tests__separator_long_interactive.snap
---
source: src/terminal/src/renderer.rs
expression: ctx.sanitized_output()
---
AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
