src/terminal/src/snapshots/knot_terminal__renderer__tests__separator_short_interactive.snap
---
source: src/terminal/src/renderer.rs
expression: ctx.sanitized_output()
---
    ────────  Phase 2  ─────────────────────────────────────────────────────────────────────────────────
